# github-issue-chatGPT

./: .gitignore  Cargo.toml  chat.response.json  comment.payload.json  complete.comment.json  issue.comment.json  response.json
src/: github-issue-gpt.rs
