[package]
name = "github-issue-gpt"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/github-issue-gpt.rs"
crate-type = ["cdylib"]

[dependencies]
http_req_wasi = { version = "0.10.2", features = ["wasmedge_ssl"] }
github-flows = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
flowsnet-platform-sdk = "0.1.2"
dotenv = "0.15.0"
